rendered/envs/friclu/ollama/deployment-ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    app.kubernetes.io/version: 0.7.1
    helm.sh/chart: ollama-1.18.0
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ollama
      app.kubernetes.io/name: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ollama
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ollama
        app.kubernetes.io/version: 0.7.1
        helm.sh/chart: ollama-1.18.0
    spec:
      containers:
        - args: null
          envFrom: null
          image: ollama/ollama:0.7.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: ollama
          ports:
            - containerPort: 11434
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits: {}
            requests: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-data
      nodeSelector:
        kubernetes.io/hostname: friclu-2
      securityContext: {}
      serviceAccountName: ollama
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama
