rendered/envs/friclu/ollama/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    app.kubernetes.io/version: 0.6.0
    helm.sh/chart: ollama-1.9.0
  name: ollama
  namespace: ollama
spec:
  ports:
    - name: http
      port: 11434
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
  type: ClusterIP
