rendered/envs/friclu/ollama/ingress-ollama.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    app.kubernetes.io/version: 0.7.1
    helm.sh/chart: ollama-1.18.0
  name: ollama
  namespace: ollama
spec:
  ingressClassName: nginx
  rules:
    - host: ollama.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: ollama
                port:
                  number: 11434
            path: /
            pathType: Prefix
